@@ -1,3 +1,7 @@
+[29 September 2007]
+
+* Add TagsHelper to assist with generating tag clouds and provide a simple example.
+
 [27 September 2007]
 
 * Add #tag_counts method to get tag counts for a specific object's tags.
